# elver

./: NOTICE  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
elver/: __init__.py  docker_build.py
examples/project_with_dockerfile/: Dockerfile  README.md  setup.cfg  setup.py  test.py
examples/project_without_dockerfile/: .gitignore  README.md  setup.cfg  setup.py
